# the-cubes

./: .gitattributes  CMakeLists.txt  README.md  go.mod  go.sum  main.go  networkManager.goX  objectTypes.go  sceneMenu.go  uiTypes.go  utils.go
src/: main.cpp
